Some work on health complement

--- a/modules/bank/view/bank_account_form.xml
+++ b/modules/bank/view/bank_account_form.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
 <form>
+    <label name="party"/>
+    <field name="party"/>
     <label name="start_date"/>
     <field name="start_date"/>
     <label name="end_date"/>
