Fix typo in dimension_displayer form view

--- a/modules/table/view/dimension_displayer_form.xml
+++ b/modules/table/view/dimension_displayer_form.xml
@@ -17,7 +17,7 @@
       <separator name="converted_text"/>
       <field name="converted_text"/>
     </group>
-    <field name="values" rowspan="2"/>
+    <field name="values"/>
   </group>
   <!-- Invisible -->
   <newline/>
