--- a/modules/table/view/table_definition_form.xml
+++ b/modules/table/view/table_definition_form.xml
@@ -6,7 +6,9 @@
     <label name="code"/>
     <field name="code" colspan="3" xfill="1"/>
     <label name="type_"/>
-    <field name="type_" colspan="3" xfill="1"/>
+    <field name="type_" xfill="1"/>
+    <label name="number_of_digits"/>
+    <field name="number_of_digits"/>
   </group>
   <group id="dim1" colspan="2" col="2" yfill="1" yexpand="1">
     <label name="dimension_kind1"/>
