--- a/modules/rule_engine/view/parameter_form.xml
+++ b/modules/rule_engine/view/parameter_form.xml
@@ -8,4 +8,6 @@
   <field name="kind"/>
   <label name="the_rule"/>
   <field name="the_rule"/>
+  <label name="the_table"/>
+  <field name="the_table"/>
 </form>
