--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -6,7 +6,16 @@
   <field name="context"/>
   <notebook>
     <page name="code">
-      <field name="code" widget="source" context_tree="data_tree" colspan="4"/>
+      <group id="display_extra_data" col="2" colspan="4">
+        <label name="extra_data" xexpand="1" xfill="1" xalign="1"/>
+        <field name="extra_data" xexpand="0" xfill="0"/>
+      </group>
+      <field name="code" widget="source" context_tree="data_tree" colspan="3" xexpand="1" xfill="1"/>
+      <group id="extra_parameters" col="2" yexpand="1" yfill="1" states="{'invisible': ~Eval('extra_data')}" xexpand="0" xfill="0">
+        <field name="rule_kwargs" view_ids="rule_engine.kwarg_parameter_tree"/>
+        <field name="rule_rules" view_ids="rule_engine.rule_parameter_tree"/>
+        <field name="rule_tables" view_ids="rule_engine.table_parameter_tree"/>
+      </group>
       <field name="data_tree" invisible="1"/>
     </page>
     <page string="Parameters" id="parameters">
