Add a boolean to decide whether a test case value in a rule engine test case is overriden or not

--- a/modules/rule_engine/view/test_case_value_tree.xml
+++ b/modules/rule_engine/view/test_case_value_tree.xml
@@ -2,4 +2,5 @@
 <tree string="Test Case Value" editable="bottom">
   <field name="name"/>
   <field name="value"/>
+  <field name="override_value"/>
 </tree>
