--- a/modules/rule_engine/view/test_case_value_form.xml
+++ b/modules/rule_engine/view/test_case_value_form.xml
@@ -3,7 +3,9 @@
   <label name="test_case"/>
   <field name="test_case" colspan="3"/>
   <label name="name"/>
-  <field name="name"/>
+  <field name="name" colspan="3"/>
+  <label name="override_value"/>
+  <field name="override_value"/>
   <label name="value"/>
   <field name="value"/>
 </form>
