Fix issue #23 Subscriber kind (company or person) is now set on product and is used on contract subscription (no more choice)

--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -29,4 +29,6 @@
       <field name="appliable_conditions_date"/>
     </page>
   </notebook>
+  <newline/>
+  <field name="subscriber_kind"/>
 </form>
