--- a/modules/insurance_product/view/dimension_displayer_form.xml
+++ b/modules/insurance_product/view/dimension_displayer_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-  <xpath expr="/form/field[@name='input_mode']" position="after">
+  <xpath expr="/form/field[@name='date_format']" position="after">
     <label name="complementary_data"/>
     <field name="complementary_data" colspan="3"/>
   </xpath>
