--- a/modules/coop_party/view/party_form.xml
+++ b/modules/coop_party/view/party_form.xml
@@ -2,8 +2,17 @@
 <data>
 
     <xpath expr="/form/notebook/page[@id='general']" position="before">
-        <page string="Summary" id="summary">
-            <field name="summary" widget="richtext"/>
+        <page string="Summary" id="summary" col="6">
+            <label name="main_address"/>
+            <group id='main_address' col='50' colspan="3">
+                <field name="main_address" colspan="49"/>
+                <button string="+" name="open_addresses"/>
+            </group>
+            <label name="main_contact_mechanism"/>
+            <group id='main_contact_mechanism' col="50">
+                <field name="main_contact_mechanism" colspan="49"/>
+                <button string="+" name="open_contact_mechanisms"/>
+            </group>
         </page>
     </xpath>
     <xpath expr="/form/group[@id='checkboxes']/label[@name='active']"
@@ -83,5 +92,10 @@
         position="replace_attributes">
         <field name="contact_mechanisms" colspan="1"
             view_ids="party.contact_mechanism_view_tree_sequence" pre_validate="1"/>
+    </xpath>
+    <xpath expr="/form" position="inside">
+        <newline/>
+        <field name="number_of_addresses"/>
+        <field name="number_of_contact_mechanisms"/>
     </xpath>
 </data>
