Add support for fare class rating method on collective (used in health modules)

--- a/modules/life_billing_collective_fr/view/coverage_form.xml
+++ b/modules/life_billing_collective_fr/view/coverage_form.xml
@@ -6,4 +6,7 @@
             <field name="rating_rules" colspan="4"/>
         </page>
     </xpath>
+    <xpath expr="/form" position="inside">
+        <field name="is_rating_by_fare_class"/>
+    </xpath>
 </data>
