--- a/modules/rule_engine/view/tag_form.xml
+++ b/modules/rule_engine/view/tag_form.xml
@@ -4,5 +4,11 @@
     <field name="name"/>
     <label name="code"/>
     <field name="code"/>
-    <notebook/>
+    <notebook>
+        <page id='tree' string='Tree'>
+            <label name="parent"/>
+            <field name="parent"/>
+            <field name="childs" colspan="4"/>
+        </page>
+    </notebook>
 </form>
