--- a/modules/rule_engine/view/tag_form.xml
+++ b/modules/rule_engine/view/tag_form.xml
@@ -10,5 +10,8 @@
             <field name="parent"/>
             <field name="childs" colspan="4"/>
         </page>
+        <page id='rules' string="Rules">
+            <field name="rules" colspan="4"/>
+        </page>
     </notebook>
 </form>
