--- a/modules/rule_engine/view/rule_parameter_tree.xml
+++ b/modules/rule_engine/view/rule_parameter_tree.xml
@@ -2,7 +2,7 @@
 <tree string="Rules" editable="bottom">
   <field name="name"/>
   <field name="code"/>
-  <field name="the_rule" widget="selection"/>
+  <field name="the_rule"/>
   <field name="kind" tree_invisible="1"/>
 </tree>
 
