--- a/modules/insurance_product/view/external_compl_parameter_tree.xml
+++ b/modules/insurance_product/view/external_compl_parameter_tree.xml
@@ -2,6 +2,6 @@
 <tree string="Tables" editable="bottom">
   <field name="name"/>
   <field name="code"/>
-  <field name="external_complementary_data" widget="selection"/>
+  <field name="external_complementary_data"/>
   <field name="kind" tree_invisible="1"/>
 </tree>
