--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -6,17 +6,17 @@
   <field name="context"/>
   <notebook>
     <page name="code">
-      <group id="display_extra_data" col="2" colspan="4">
-        <label name="extra_data" xexpand="1" xfill="1" xalign="1"/>
-        <field name="extra_data" xexpand="0" xfill="0"/>
-      </group>
-      <field name="code" widget="source" context_tree="data_tree" colspan="3" xexpand="1" xfill="1"/>
-      <group id="extra_parameters" col="2" yexpand="1" yfill="1" states="{'invisible': ~Eval('extra_data')}" xexpand="0" xfill="0">
-        <field name="rule_kwargs" view_ids="rule_engine.kwarg_parameter_tree"/>
-        <field name="rule_rules" view_ids="rule_engine.rule_parameter_tree"/>
-        <field name="rule_tables" view_ids="rule_engine.table_parameter_tree"/>
-      </group>
-      <field name="data_tree" invisible="1"/>
+      <field name="code" widget="source" context_tree="data_tree" colspan="4" xexpand="1" xfill="1"/>
+      <label name="extra_data"/>
+      <field name="extra_data" xalign="0" colspan="3"/>
+      <label name="extra_data_kind"/>
+      <field name="extra_data_kind"/>
+      <newline/>
+      <field name="rule_kwargs" view_ids="rule_engine.kwarg_parameter_tree,rule_engine.parameter_form" colspan="4"/>
+      <newline/>
+      <field name="rule_rules" view_ids="rule_engine.rule_parameter_tree,rule_engine.parameter_form" colspan="4"/>
+      <newline/>
+      <field name="rule_tables" view_ids="rule_engine.table_parameter_tree,rule_engine.parameter_form" colspan="4"/>
     </page>
     <page id="tags" string="Tags">
       <field name="tags" colspan="4"/>
@@ -32,5 +32,7 @@
       <field name="debug_mode"/>
       <field name="exec_logs" colspan="2"/>
     </page>
+    <newline/>
+    <field name="data_tree" invisible="1"/>
   </notebook>
 </form>
