Party relation : Reset of the functionality. Need to manually delete from DB in ir_action_act_window where res_model = 'party.party_relation_kind' the column domain Data migration is done through test case : coop_start -t coop_party

--- a/modules/coop_party/view/relation_tree_from.xml
+++ b/modules/coop_party/view/relation_tree_from.xml
@@ -2,6 +2,6 @@
 <tree>
     <field name="start_date"/>
     <field name="end_date"/>
-    <field name="kind"/>
+    <field name="relation_name"/>
     <field name="to_party"/>
 </tree>
