--- a/modules/coop_party/view/relation_form.xml
+++ b/modules/coop_party/view/relation_form.xml
@@ -5,19 +5,12 @@
     <label name="end_date"/>
     <field name="end_date"/>
     <newline/>
-    <label name="kind"/>
-    <field name="kind"/>
-    <label name="reverse_kind"/>
-    <field name="reverse_kind"/>
+    <label name="relation_kind"/>
+    <field name="relation_kind"/>
+    <label name="relation_name"/>
+    <field name="relation_name"/>
     <label name="from_party"/>
     <field name="from_party"/>
     <label name="to_party"/>
     <field name="to_party"/>
-    <!--
-        <label name="parent"/>
-        <field name="parent"/>
-        <field name="children" colspan="4"
-        view_ids="coop_party.party_relation_view_tree_hierarchical,coop_party.party_relation_view_form"
-        mode="tree,form"/>
-    -->
 </form>
