--- a/modules/coop_party/view/relation_kind_form.xml
+++ b/modules/coop_party/view/relation_kind_form.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
 <form string="Party Relation Kind">
-    <label name="key"/>
-    <field name="key"/>
     <label name="name"/>
     <field name="name"/>
-    <newline/>
-    <label name="childs"/>
-    <field name="childs" colspan="4"/>
+    <label name="code"/>
+    <field name="code"/>
+    <label name="reversed_name"/>
+    <field name="reversed_name"/>
 </form>
