--- a/modules/coop_party/view/relation_tree_hierarchical.xml
+++ b/modules/coop_party/view/relation_tree_hierarchical.xml
@@ -2,9 +2,5 @@
 <tree>
     <field name="from_party"/>
     <field name="to_party"/>
-    <field name="kind"/>
-    <!--
-        <field name="parent" tree_invisible="1"/>
-        <field name="children" tree_invisible="1"/>
-    -->
+    <field name="relation_kind"/>
 </tree>
