--- a/modules/coop_party/view/relation_tree_to.xml
+++ b/modules/coop_party/view/relation_tree_to.xml
@@ -2,6 +2,6 @@
 <tree>
     <field name="start_date"/>
     <field name="end_date"/>
-    <field name="reverse_kind"/>
+    <field name="relation_name"/>
     <field name="from_party"/>
 </tree>
