add bank link to bank account (prepare migration to new tryton module)

--- a/modules/party_bank/view/bank_account_form.xml
+++ b/modules/party_bank/view/bank_account_form.xml
@@ -8,6 +8,8 @@
     <field name="currency"/>
     <label name="agency"/>
     <field name="agency"/>
+    <label name="bank"/>
+    <field name="bank"/>
     <label name="address"/>
     <field name="address"/>
     <field name="account_numbers" pre_validate="1" colspan="4"/>
