--- a/modules/party_bank/view/bank_tree.xml
+++ b/modules/party_bank/view/bank_tree.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-    <tree>
+    <tree string="Bank">
+        <field name="party"/>
         <field name="bic"/>
         <field name="bank_code"/>
         <field name="branch_code"/>
