--- a/modules/life_billing_collective_fr/view/rate_line_form.xml
+++ b/modules/life_billing_collective_fr/view/rate_line_form.xml
@@ -3,6 +3,10 @@
     <label name="contract"/>
     <field name="contract"/>
     <newline/>
+    <label name="start_date"/>
+    <field name="start_date"/>
+    <label name="end_date"/>
+    <field name="end_date"/>
     <label name="covered_element"/>
     <field name="covered_element"/>
     <label name="option"/>
