--- a/modules/billing_individual/view/move_form.xml
+++ b/modules/billing_individual/view/move_form.xml
@@ -25,10 +25,10 @@
   </group>
   <group id="lines" colspan="6" yexpand="1" yfill="1">
     <group id="details" colspan="2" col="1" yexpand="1" yfill="1">
-      <field name="coverage_details" mode="tree,form" view_ids="billing.move_line_detail_tree,billing.move_line_detail_form"/>
-      <field name="tax_details" mode="tree,form" view_ids="billing.move_line_detail_tree,billing.move_line_detail_form"/>
-      <field name="fee_details" mode="tree,form" view_ids="billing.move_line_detail_tree,billing.move_line_detail_form"/>
+      <field name="coverage_details" mode="tree,form" view_ids="billing_individual.move_line_detail_tree,billing_individual.move_line_detail_form"/>
+      <field name="tax_details" mode="tree,form" view_ids="billing_individual.move_line_detail_tree,billing_individual.move_line_detail_form"/>
+      <field name="fee_details" mode="tree,form" view_ids="billing_individual.move_line_detail_tree,billing_individual.move_line_detail_form"/>
     </group>
-    <field name="schedule" mode="tree" view_ids="billing.move_line_amount_date_tree"/>
+    <field name="schedule" mode="tree" view_ids="billing_individual.move_line_amount_date_tree"/>
   </group>
 </form>
