--- a/modules/billing_individual/view/party_form.xml
+++ b/modules/billing_individual/view/party_form.xml
@@ -6,8 +6,8 @@
       <field name="receivable_today"/>
       <label name="payable_today"/>
       <field name="payable_today"/>
-      <field name="receivable_lines" colspan="2" view_ids="billing.move_line_tree,account.move_line_view_form"/>
-      <field name="payable_lines" colspan="2" view_ids="billing.move_line_tree,account.move_line_view_form"/>
+      <field name="receivable_lines" colspan="2" view_ids="billing_individual.move_line_tree,account.move_line_view_form"/>
+      <field name="payable_lines" colspan="2" view_ids="billing_individual.move_line_tree,account.move_line_view_form"/>
     </page>
   </xpath>
 </data>
