--- a/modules/commission/view/move_form.xml
+++ b/modules/commission/view/move_form.xml
@@ -7,6 +7,6 @@
     <field name="com_amount"/>
   </xpath>
   <xpath expr="/form/group[@id='lines']/group[@id='details']/field[@name='coverage_details']" position="after">
-    <field name="com_details" mode="tree,form" view_ids="billing.move_line_detail_tree,billing.move_line_detail_form"/>
+    <field name="com_details" mode="tree,form" view_ids="billing_individual.move_line_detail_tree,billing_individual.move_line_detail_form"/>
   </xpath>
 </data>
