Add manual billing option on contract

--- a/modules/billing_individual/view/contract_form.xml
+++ b/modules/billing_individual/view/contract_form.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0"?>
 <data>
-  <xpath expr="/form/notebook/page[@id='options']" position="after">
-    <page string="Billing" id="billing">
+  <xpath expr="/form/notebook/page[@id='billing']" position="inside">
       <field name="billing_managers" mode="form,tree" colspan="4"/>
-      <group id="prices" colspan="4" yexpand="1" yfill="1">
         <label name="next_billing_date"/>
         <field name="next_billing_date"/>
         <field name="prices" colspan="4"/>
         <button name="button_calculate_prices" string="Calculate Prices" colspan="4"/>
-      </group>
-    </page>
+  </xpath>
+  <xpath expr="/form/notebook/page[@id='billing']" position="after">
     <page string="Accounting" id="accounting" col="2">
       <label name="receivable_today"/>
       <field name="receivable_today"/>
@@ -19,5 +17,10 @@
         <field name="display_all_lines"/>
       </group>
     </page>
+  </xpath>
+  <xpath expr="/form">
+    <newline/>
+    <field name="use_prices"/>
+    <newline/>
   </xpath>
 </data>
