--- a/modules/life_billing_collective_fr/view/contract_form.xml
+++ b/modules/life_billing_collective_fr/view/contract_form.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0"?>
 <data>
-  <xpath expr="/form/notebook/page[@id='options']" position="after">
-    <page string="Rates" id="rates" states="{'invisible': ~Eval('use_rates')}">
+  <xpath expr="/form/notebook/page[@id='billing']" position="inside">
       <label name="next_assessment_date"/>
       <field name="next_assessment_date"/>
       <field name="rates" colspan="4"/>
       <button name="button_calculate_rates" string="Calculate Rates" colspan="4"/>
-    </page>
     </xpath>
     <xpath expr="/form" position="inside">
         <newline/>
