--- a/modules/coop_utils/view/export_package_form.xml
+++ b/modules/coop_utils/view/export_package_form.xml
@@ -4,5 +4,8 @@
     <field name="package_name"/>
     <label name="code"/>
     <field name="code"/>
-    <field name="instances_to_export" colspan="4" yexpand="1" yfill="1"/>
+    <field name="instances_to_export" colspan="4"/>
+    <label name="model"/>
+    <field name="model" widget="selection"/>
+    <newline/>
 </form>
