Set manual billing on rate line based on contract value

--- a/modules/life_billing_collective_fr/view/coverage_form.xml
+++ b/modules/life_billing_collective_fr/view/coverage_form.xml
@@ -7,6 +7,9 @@
         </page>
     </xpath>
     <xpath expr="/form" position="inside">
+        <newline/>
         <field name="is_rating_by_fare_class"/>
+        <field name="use_rates"/>
+        <newline/>
     </xpath>
 </data>
