--- a/modules/life_billing_collective_fr/view/covered_data_form.xml
+++ b/modules/life_billing_collective_fr/view/covered_data_form.xml
@@ -5,7 +5,7 @@
     </xpath>
     <xpath expr="/form/field[@name='complementary_data']" position="before">
         <label name="fare_class_group"/>
-        <field name="fare_class_group"/>
+        <field name="fare_class_group" widget="selection"/>
         <newline/>
     </xpath>
 </data>
