--- a/modules/insurance_product/view/coverage_tree.xml
+++ b/modules/insurance_product/view/coverage_tree.xml
@@ -2,5 +2,6 @@
 <data>
     <xpath expr="/tree/field[@name='code']" position="after">
         <field name="family"/>
+        <field name="kind" tree_invisible="1"/>
     </xpath>
 </data>
