Create Rate Note Reception Wizard

--- a/modules/life_billing_collective_fr/view/rate_note_line_form.xml
+++ b/modules/life_billing_collective_fr/view/rate_note_line_form.xml
@@ -19,5 +19,7 @@
     </group>
     <label name="amount"/>
     <field name="amount"/>
+    <label name="client_amount"/>
+    <field name="client_amount"/>
     <field name="childs" colspan="4"/>
 </form>
