--- a/modules/insurance_product/view/coverage_tree.xml
+++ b/modules/insurance_product/view/coverage_tree.xml
@@ -4,4 +4,7 @@
         <field name="family"/>
         <field name="kind" tree_invisible="1"/>
     </xpath>
+    <xpath expr="/tree" position="inside">
+        <field name="insurer"/>
+    </xpath>
 </data>
