Do not display insurer link as selection

--- a/modules/insurance_product/view/coverage_form.xml
+++ b/modules/insurance_product/view/coverage_form.xml
@@ -15,7 +15,7 @@
         <field name="item_desc"/>
         <newline/>
         <label name="insurer"/>
-        <field name="insurer" widget="selection"/>
+        <field name="insurer"/>
         <newline/>
     </xpath>
     <xpath expr="/form/label[@name='template']" position="before">
