--- a/modules/commission/view/plan_form.xml
+++ b/modules/commission/view/plan_form.xml
@@ -3,4 +3,9 @@
     <xpath expr="/form" position="replace_attributes">
         <form string="Commission Plans"/>
     </xpath>
+    <xpath expr="/form/notebook/page[@id='admin']/group[@id='left']" position="inside">
+        <newline/>
+        <label name="commission_kind"/>
+        <field name="commission_kind"/>
+    </xpath>
 </data>
