--- a/modules/insurance_contract/view/management_role_form.xml
+++ b/modules/insurance_contract/view/management_role_form.xml
@@ -4,6 +4,8 @@
   <field name="start_date"/>
   <label name="end_date"/>
   <field name="end_date"/>
+  <label name="kind"/>
+  <field name="kind"/>
   <label name="party"/>
   <field name="party"/>
   <label name="protocol"/>
