Add check number input

--- a/modules/collection/view/collection_parameters_form.xml
+++ b/modules/collection/view/collection_parameters_form.xml
@@ -6,4 +6,6 @@
   <field name="party" colspan="3"/>
   <label name="kind"/>
   <field name="kind" colspan="3"/>
+  <label name="check_number"/>
+  <field name="check_number"/>
 </form>
