--- a/modules/collection/view/collection_form.xml
+++ b/modules/collection/view/collection_form.xml
@@ -8,6 +8,8 @@
   <field name="amount" colspan="3"/>
   <label name="kind"/>
   <field name="kind" colspan="3"/>
+  <label name="check_number"/>
+  <field name="check_number" colspan="3"/>
   <label name="party"/>
   <field name="party" colspan="3"/>
   <label name="assignment_move"/>
