--- a/modules/collection/view/collection_tree.xml
+++ b/modules/collection/view/collection_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tree string="Assignment Logs">
+<tree string="Collections">
   <field name="create_date"/>
   <field name="create_uid"/>
   <field name="amount"/>
