--- a/modules/insurance_collection/view/assign_collection_form.xml
+++ b/modules/insurance_collection/view/assign_collection_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-  <xpath expr="/form/field[@name='amount']" position="after">
+  <xpath expr="/form/field[@name='party']" position="after">
     <label name="contract"/>
     <field name="contract" colspan="3"/>
   </xpath>
