Add pais and expected amounts to rate_note

--- a/modules/life_billing_collective_fr/view/rate_note_tree.xml
+++ b/modules/life_billing_collective_fr/view/rate_note_tree.xml
@@ -5,4 +5,6 @@
     <field name="status"/>
     <field name="start_date"/>
     <field name="end_date"/>
+    <field name="amount_expected"/>
+    <field name="amount_paid"/>
 </tree>
