--- a/modules/life_billing_collective_fr/view/rate_note_form.xml
+++ b/modules/life_billing_collective_fr/view/rate_note_form.xml
@@ -8,5 +8,9 @@
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
+    <label name="amount_expected"/>
+    <field name="amount_expected"/>
+    <label name="amount_paid"/>
+    <field name="amount_paid"/>
     <field name="lines" colspan="4"/>
 </form>
