Rate note number allocation and display move from rate note + other Ui enhancements

--- a/modules/life_billing_collective_fr/view/rate_note_tree.xml
+++ b/modules/life_billing_collective_fr/view/rate_note_tree.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Rate Note">
+    <field name="name"/>
     <field name="client"/>
     <field name="contract"/>
     <field name="status"/>
