--- a/modules/life_billing_collective_fr/view/rate_note_form.xml
+++ b/modules/life_billing_collective_fr/view/rate_note_form.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
 <form string="Rate Note">
-    <label name="contract"/>
-    <field name="contract"/>
+    <label name="name"/>
+    <field name="name"/>
     <label name="status"/>
     <field name="status"/>
+    <label name="contract"/>
+    <field name="contract"/>
+    <newline/>
     <label name="start_date"/>
     <field name="start_date"/>
     <label name="end_date"/>
@@ -12,5 +15,7 @@
     <field name="amount_expected"/>
     <label name="amount_paid"/>
     <field name="amount_paid"/>
+    <label name="move"/>
+    <field name="move"/>
     <field name="lines" colspan="4"/>
 </form>
