Use indexed rate on health coverage to calculate rate note line amount

--- a/modules/life_billing_collective_fr/view/rate_note_line_tree.xml
+++ b/modules/life_billing_collective_fr/view/rate_note_line_tree.xml
@@ -6,6 +6,7 @@
   <field name="rate" factor="100">
     <suffix string="%"/>
   </field>
+  <field name="indexed_rate"/>
   <field name="sum_amount" sum="Total">
     <suffix name="currency_symbol"/>
   </field>
