Add indexed value for collective billing

--- a/modules/life_billing_collective_fr/view/rate_line_form.xml
+++ b/modules/life_billing_collective_fr/view/rate_line_form.xml
@@ -28,8 +28,8 @@
     <newline/>
     <label name="index"/>
     <field name="index"/>
-    <label name="index_value"/>
-    <field name="index_value"/>
+    <label name="indexed_value"/>
+    <field name="indexed_value"/>
 
     <newline/>
     <field name="manual_billing"/>
