--- a/modules/life_billing_collective_fr/view/rate_line_tree.xml
+++ b/modules/life_billing_collective_fr/view/rate_line_tree.xml
@@ -4,9 +4,10 @@
     <field name="rate" factor="100">
         <suffix string="%"/>
     </field>
-    <field name="index_value"/>
+    <field name="indexed_value"/>
     <field name="index"/>
     <field name="childs" tree_invisible="1"/>
     <field name="parent" tree_invisible="1"/>
     <field name="manual_billing" tree_invisible="1"/>
+    <field name="start_date_" tree_invisible="1"/>
 </tree>
