--- a/modules/collection/view/collection_form.xml
+++ b/modules/collection/view/collection_form.xml
@@ -2,8 +2,8 @@
 <form string="Collection">
   <label name="create_user"/>
   <field name="create_user"/>
-  <label name="create_date"/>
-  <field name="create_date"/>
+  <label name="create_date_"/>
+  <field name="create_date_"/>
   <label name="amount"/>
   <field name="amount" colspan="3"/>
   <label name="kind"/>
