--- a/modules/collection/view/collection_tree.xml
+++ b/modules/collection/view/collection_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Collections">
-  <field name="create_date"/>
+  <field name="create_date_"/>
   <field name="create_uid"/>
   <field name="amount"/>
   <field name="kind"/>
