--- a/modules/rule_engine/view/execution_log_tree.xml
+++ b/modules/rule_engine/view/execution_log_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Rule Executions">
-    <field name="create_date"/>
+    <field name="create_date_"/>
     <field name="user"/>
     <field name="result"/>
 </tree>
