Some work on loans, add loan increments, defferal and early payments

--- a/modules/loan_contract/view/loan_form.xml
+++ b/modules/loan_contract/view/loan_form.xml
@@ -1,36 +1,63 @@
 <?xml version="1.0"?>
 <form string="Loan">
-  <label name="kind"/>
-  <field name="kind"/>
-  <label name="fixed_rate"/>
-  <group id="fixed_rate">
-    <field name="fixed_rate" xexpand="0"/>
-    <label id="percent" string="%" xexpand="0" xalign="0"/>
-  </group>
-  <newline/>
-  <label name="contract"/>
-  <field name="contract"/>
-  <newline/>
-  <label name="amount"/>
-  <group id="amount">
-    <field name="amount" xexpand="0"/>
-    <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
-  </group>
-  <newline/>
-  <label name="monthly_payment_number"/>
-  <field name="monthly_payment_number"/>
-  <label name="monthly_payment_amount"/>
-  <group id="monthly_payment_amount">
-    <field name="monthly_payment_amount" xexpand="0"/>
-    <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
-  </group>
-  <newline/>
-  <label name="funds_release_date"/>
-  <field name="funds_release_date"/>
-  <label name="first_payment_date"/>
-  <field name="first_payment_date"/>
-  <newline/>
-  <label name="lender"/>
-  <field name="lender"/>
-  <field name="loan_shares" colspan="4" mode="tree,form" view_ids="loan_contract.loan_share_view_tree_editable,loan_contract.loan_share_view_form"/>
+  <notebook>
+    <page id="main" string="Loan Parameters">
+      <label name="active"/>
+      <field name="active"/>
+      <newline/>
+      <label name="kind"/>
+      <field name="kind"/>
+      <label name="rate"/>
+      <group id="rate" states="{
+            'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}">
+        <field name="rate" xexpand="0" factor="100"/>
+        <label id="percent" string="%" xexpand="0" xalign="0"/>
+      </group>
+      <newline/>
+      <label name="contract"/>
+      <field name="contract"/>
+      <newline/>
+      <label name="amount"/>
+      <group id="amount">
+        <field name="amount" xexpand="0"/>
+        <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+      </group>
+      <newline/>
+      <label name="number_of_payments"/>
+      <group id='number_of_payments'>
+        <field name="number_of_payments"/>
+        <field name="payment_frequency"/>
+      </group>
+      <label name="payment_amount"/>
+      <group id="payment_amount">
+        <field name="payment_amount" xexpand="0"/>
+        <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+      </group>
+      <newline/>
+      <label name="funds_release_date"/>
+      <field name="funds_release_date"/>
+      <label name="first_payment_date"/>
+      <field name="first_payment_date"/>
+      <newline/>
+      <label name="defferal"/>
+      <field name="defferal"/>
+      <label name="defferal_duration"/>
+      <field name="defferal_duration"/>
+      <newline/>
+      <label name="lender"/>
+      <field name="lender"/>
+      <field name="loan_shares" colspan="4" mode="tree,form" view_ids="loan_contract.loan_share_view_tree_editable,loan_contract.loan_share_view_form"/>
+    </page>
+    <page id="increments" string="Increments">
+      <field name="increments" colspan="4" mode="tree"/>
+    </page>
+    <page id="table" string="Amortization Table">
+      <button name="calculate_amortization_table" string="Calculate Amortization Table"/>
+      <field name="payments" colspan="4" mode="tree"/>
+    </page>
+    <page id="early_payments" string="Early Payments">
+      <field name="early_payments" colspan="4"/>
+    </page>
+  </notebook>
+  <field name="currency"/>
 </form>
