--- a/modules/loan_contract/view/loan_tree.xml
+++ b/modules/loan_contract/view/loan_tree.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <tree>
   <field name="kind"/>
-  <field name="fixed_rate">
+  <field name="rate" factor="100">
     <suffix string="%"/>
   </field>
-  <field name="monthly_payment_number"/>
-  <field name="monthly_payment_amount"/>
+  <field name="number_of_payments"/>
+  <field name="payment_amount"/>
   <field name="amount">
    <suffix name="currency_symbol"/>
  </field>
