Add loan shares to loan creation wizard

--- a/modules/loan_contract/view/loan_creation_parameters_form.xml
+++ b/modules/loan_contract/view/loan_creation_parameters_form.xml
@@ -27,6 +27,8 @@
     <field name="first_payment_date"/>
     <label name="lender"/>
     <field name="lender"/>
+    <newline/>
+    <field name="loan_shares" colspan="4"/>
     <field name="currency"/>
     <newline/>
     <field name="contract"/>
