--- a/modules/loan_contract/view/loan_share_tree.xml
+++ b/modules/loan_contract/view/loan_share_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
-<tree>
+<tree string="Loan Shares" editable="bottom">
     <field name="loan"/>
-    <field name="share">
+    <field name="share" factor="100">
         <suffix string="%"/>
     </field>
     <field name="person"/>
