--- a/modules/insurance_claim/view/claim_form.xml
+++ b/modules/insurance_claim/view/claim_form.xml
@@ -29,9 +29,9 @@
     <page string="Documents" id="documents">
       <field name="documents" xexpand="1" xfill="1" yexpand="1" yfill="1" mode="form" />
     </page>
-    <page string="History" id="History">
+   <!--  <page string="History" id="History">
       <field name="claim_history" colspan="4"/>
-    </page>
+    </page> -->
   </notebook>
   <group id="contracts" states="{'invisible': True}">
     <field name="possible_contracts"/>
