--- a/modules/billing_individual/view/price_line_expandable_tree.xml
+++ b/modules/billing_individual/view/price_line_expandable_tree.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <tree string="Pricing Lines">
 	<field name="name"/>
+    <field name="start_date"/>
 	<field name="amount">
         <suffix name="currency_symbol"/>
     </field>
