Do not display loan on delivered service if not loan

--- a/modules/loan_claim/view/delivered_service_form.xml
+++ b/modules/loan_claim/view/delivered_service_form.xml
@@ -4,4 +4,8 @@
         <label name="loan"/>
         <field name="loan" widget="selection"/>
     </xpath>
+    <xpath expr="/form" position="inside">
+        <newline/>
+        <field name="is_loan"/>
+    </xpath>
 </data>
