--- a/modules/health/view/party_form.xml
+++ b/modules/health/view/party_form.xml
@@ -3,7 +3,7 @@
     <xpath expr="/form/notebook/page[@id='compl_data']" position="inside">
         <field name="health_complement" colspan="4" mode="form,tree"/>
     </xpath>
-    <xpath expr="/form/notebook/page[@id='summary']" position="inside">
+    <xpath expr="/form/notebook/page[@id='summary']/field[@name='summary']" position="after">
         <label name="health_contract"/>
         <field name="health_contract"/>
     </xpath>
