Improve test_case launcher ergonomy

--- a/modules/coop_utils/view/select_test_cases_form.xml
+++ b/modules/coop_utils/view/select_test_cases_form.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <form string="Select Test Cases">
-  <field name="test_cases" colspan="4" mode="tree"/>
-  <label name="select_all"/>
-  <field name="select_all" colspan="3"/>
+  <field name="test_cases" colspan="2" mode="tree"/>
+  <field name="test_files" colspan="2" mode="tree"/>
+  <label name="select_all_test_cases"/>
+  <field name="select_all_test_cases"/>
+  <label name="select_all_files"/>
+  <field name="select_all_files"/>
 </form>
