--- a/modules/claim/view/claim_form.xml
+++ b/modules/claim/view/claim_form.xml
@@ -21,10 +21,10 @@
   <newline/>
   <notebook>
     <page string="Losses" id="losses">
-      <field name="losses" group="multi_losses" mode="tree" view_ids="insurance_claim.loss_simple_tree" xexpand="0" xfill="0"/>
-      <field name="losses" group="multi_losses" mode="form" relation="claim.loss" relation_field="claim" view_ids="insurance_claim.loss_view_form"/>
-      <field name="losses" group="multi_losses" mode="form" relation="ins_contract.delivered_service" relation_field="loss" view_ids="insurance_claim.delivered_service_view_form"/>
-      <field name="losses" group="multi_losses" mode="form" relation="claim.indemnification" relation_field="delivered_service" view_ids="insurance_claim.indemnification_view_form"/>
+      <field name="losses" group="multi_losses" mode="tree" view_ids="claim.loss_simple_tree" xexpand="0" xfill="0"/>
+      <field name="losses" group="multi_losses" mode="form" relation="claim.loss" relation_field="claim" view_ids="claim.loss_view_form"/>
+      <field name="losses" group="multi_losses" mode="form" relation="ins_contract.delivered_service" relation_field="loss" view_ids="claim.delivered_service_view_form"/>
+      <field name="losses" group="multi_losses" mode="form" relation="claim.indemnification" relation_field="delivered_service" view_ids="claim.indemnification_view_form"/>
     </page>
     <page string="Documents" id="documents">
       <field name="documents" xexpand="1" xfill="1" yexpand="1" yfill="1" mode="form" />
