--- a/modules/claim/view/claim_form.xml
+++ b/modules/claim/view/claim_form.xml
@@ -23,7 +23,7 @@
     <page string="Losses" id="losses">
       <field name="losses" group="multi_losses" mode="tree" view_ids="claim.loss_simple_tree" xexpand="0" xfill="0"/>
       <field name="losses" group="multi_losses" mode="form" relation="claim.loss" relation_field="claim" view_ids="claim.loss_view_form"/>
-      <field name="losses" group="multi_losses" mode="form" relation="ins_contract.delivered_service" relation_field="loss" view_ids="claim.delivered_service_view_form"/>
+      <field name="losses" group="multi_losses" mode="form" relation="contract.delivered_service" relation_field="loss" view_ids="claim.delivered_service_view_form"/>
       <field name="losses" group="multi_losses" mode="form" relation="claim.indemnification" relation_field="delivered_service" view_ids="claim.indemnification_view_form"/>
     </page>
     <page string="Documents" id="documents">
